SFUSA/force-app/main/default/objects/Forecast_Snapshot__c/fields/Campaign__c.field-meta.xml
<CustomField>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipName>Forecast_Snapshots</relationshipName>
        <type>Lookup</type>
    </CustomField>