SFUSA/force-app/main/default/objects/Forecast_Snapshot__c/fields/Dec_Forecast_Amount__c.field-meta.xml
<CustomField>
        <fullName>Dec_Forecast_Amount__c</fullName>
        <label>Dec Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>