SFUSA/force-app/main/default/objects/Forecast_Snapshot__c/fields/Forecast_Date__c.field-meta.xml
<CustomField>
        <fullName>Forecast_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </CustomField>