SFUSA/force-app/main/default/objects/Forecast_Snapshot__c/fields/Forecast_Month__c.field-meta.xml
<CustomField>
        <fullName>Forecast_Month__c</fullName>
        <formula>CASE(MONTH(Forecast_Date__c), 1, "January", 2, "February", 3, "March",  4, "April",  5, "May",  6, "June", 7, "July", 8, "August", 9, "September", 10, "October", 11, "November", 12, "December", "None")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Month</label>
        <type>Text</type>
    </CustomField>