SFUSA/force-app/main/default/objects/Forecast_Snapshot__c/fields/Marketing_Plan__c.field-meta.xml
<CustomField>
        <fullName>Marketing_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Plan</label>
        <referenceTo>MarketingPlan__c</referenceTo>
        <relationshipName>Forecast_Snapshots</relationshipName>
        <type>Lookup</type>
    </CustomField>