SFUSA/force-app/main/default/objects/Forecast_Snapshot__c/recordTypes/Automated.recordType-meta.xml
<RecordType>
        <fullName>Automated</fullName>
        <active>true</active>
        <description>Record type to capture automated Forecast Snapshot records</description>
        <label>Automated</label>
    </RecordType>